<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uc.cicely.finalproject1.ShowMeActivity"
    android:background="@color/BackgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:layout_weight="0.41">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/tagList"
                android:background="@color/LightGrey"
                android:layout_weight="0.42" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dirNeeded"
                android:id="@+id/lblDirNeeded"
                android:textColor="@color/LightGrey"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblNA"
                android:id="@+id/lblDistance"
                android:textColor="@color/White"
                android:layout_gravity="right"
                android:layout_weight="0.42"
                android:layout_alignTop="@+id/lblDir"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/distance"
                android:id="@+id/textView2"
                android:textColor="@color/LightGrey"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblNA"
                android:id="@+id/lblDir"
                android:textColor="@color/White"
                android:layout_weight="0.42"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
